git/travelapp/gateway.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: travel-gateway
spec:
  selector:
    istio: ingressgateway # default Istio controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: travel-control 
spec:
  hosts:
  - "*"
  gateways:
  - travel-gateway
  http:
  # default route
  - route:
    - destination:
        host: control.travel-control.svc.cluster.local
        port:
          number: 8080
